Fix the url handler GetTasksByUserID()
